<resources>
<<<<<<< HEAD
    <string name="app_name">记账本</string>
    <string name="account_book">记账本</string>
    <string name="date_select">日期(可选择)</string>
    <string name="income_expand_type">收支类型</string>
    <string name="amount">金额(元)</string>
    <string name="please_enter_amount">请输入金额</string>
    <string name="remark">备注</string>
    <string name="remark_hint">备注...</string>
    <string name="please_select_income_expand_type">请选择收支类型</string>
    <string name="save">保存</string>
    <string name="add_record">添加记录</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="ie_typr_and_amount_not_null">收支类型和金额不能为空</string>
    <string name="add_success">添加成功</string>
    <string name="editor_record">编辑记录</string>
=======
    <string name="app_name">Happy Birthday</string>
    <string name="str1">one</string>
    <string name="str2">two</string>
    <string name="str3">three</string>
    <string name="btn_label" translatable="false">Button</string>
    <string name="btntmp_label" translatable="false">Click</string>
    <string name="hint" translatable="false">Input...</string>
    <string name="txt_result" translatable="false">Result:</string>

    <string name="txt_switch" translatable="false">Result:</string>
    <string name="rmb_hint" translatable="false">Input RMB</string>
    <string name="dollar" translatable="false">dollar</string>
    <string name="euro" translatable="false">euro</string>
    <string name="won" translatable="false">won</string>
    <string name="setting" translatable="false">setting</string>
>>>>>>> 6cb1247689b26ec7adc35ddef9805c9d1dca8021
</resources>
