<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:text="@string/str1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="578dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:srcCompat="@drawable/th" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:text="@string/str2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:text="@string/str3" />

</LinearLayout>